--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Barlow+Condensed:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+:root {
+    --soft-grey: #6e6a6a;
+}
 
 * {
     box-sizing: border-box;
