--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
     padding: 0;
     font-family: 'Montserrat', sans-serif;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 5.5rem 1fr 1fr;
     grid-template-areas:
         'header'
         'main'
