--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,7 @@
+.toggle-button {
+    display: none;
+}
+
 .header {
     display: flex;
     align-items: center;
@@ -60,4 +64,33 @@
 .header-nav__link_theme-gold:active {
     background: white;
     color: var(--soft-grey);
+}
+
+@media (max-width: 50rem), (max-height: 40rem) {
+    .toggle-button {
+        display: inline-block;
+        width: 3rem;
+        background: transparent;
+        border: none;
+        cursor: pointer;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+
+    .toggle-button:focus {
+        outline: none;
+    }
+
+    .toggle-button__bar {
+        width: 100%;
+        height: 0.3rem;
+        background: goldenrod;
+        display: block;
+        border-radius: 2rem;
+        margin: 0.3rem 0;
+    }
+
+    .header-nav {
+        display: none;
+    }
 }
