--- a/src/components/Layout/Overview/Overview.css
+++ b/src/components/Layout/Overview/Overview.css
@@ -1,6 +1,6 @@
 .product-overview {
     background: url('../../../assets/images/back.jpg') 0 0 / cover no-repeat;
-    width: 100vw;
+    width: 100%;
     height: 40vh;
     display: flex;
     align-items: center;
@@ -21,4 +21,32 @@
 
 .product-description_padding {
     padding-bottom: 2rem;
+}
+
+@media (max-width: 75rem) {
+    .product-overview {
+        height: 50vh;
+    }
+
+    .product-description_size-large {
+        font-size: 1.5rem;
+        margin: 0;
+        padding: 0.5rem 0;
+    }
+
+    .product-description_padding {
+        padding-bottom: 0.5rem;
+    }
+}
+
+@media (max-width: 50rem) {
+    .product-overview {
+        height: 60vh;
+    }
+
+    .product-description_size-large {
+        font-size: 1rem;
+        margin: 0;
+        padding: 0.2rem 0;
+    }
 }
