--- a/src/components/Layout/Products/Featured/Featured.css
+++ b/src/components/Layout/Products/Featured/Featured.css
@@ -3,3 +3,10 @@
     justify-content: center;
     padding: 0 4rem;
 }
+
+@media (max-width: 50rem) {
+    .product-content__row {
+        flex-direction: column;
+        padding: 0 1rem;
+    }
+}
