--- a/src/components/Layout/Products/Product/Product.css
+++ b/src/components/Layout/Products/Product/Product.css
@@ -41,3 +41,28 @@
 .product-duration {
     color: #868181;
 }
+
+@media (max-width: 75rem) {
+    .featured {
+        top: 1.3rem;
+        left: 0.8rem;
+        padding: 0 0.5rem;
+        background: red;
+        color: white;
+        font-weight: bold;
+        font-size: 0.6rem;
+    }
+
+    .product__text,
+    .product-price,
+    .product-duration {
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 50rem) {
+    .product-content__row {
+        flex-direction: column;
+        padding: 0 1rem;
+    }
+}
