--- a/src/components/Layout/ImageFooter/ImageFooter.css
+++ b/src/components/Layout/ImageFooter/ImageFooter.css
@@ -7,3 +7,11 @@
     height: 100vh;
     grid-area: footer;
 }
+
+@media (max-width: 75rem) {
+    .footer {
+        background-size: 100% 100%;
+        width: 100%;
+        height: 100%;
+    }
+}
