--- a/src/components/Layout/ImageFooter/Navigation/Navigation.css
+++ b/src/components/Layout/ImageFooter/Navigation/Navigation.css
@@ -24,3 +24,39 @@
     padding-top: 2rem;
     margin-right: 4rem;
 }
+
+@media (max-width: 75rem) {
+    .footer-nav__items {
+        display: flex;
+        justify-content: center;
+        padding-top: 6rem;
+        margin: 0;
+    }
+
+    .footer-list__item {
+        font-size: 1.2rem;
+        padding: 1rem;
+    }
+
+    .footer-list_pad {
+        padding-top: 2rem;
+        margin-bottom: 2rem;
+    }
+}
+
+@media (max-width: 50rem) {
+    .footer__link {
+        padding: 1rem 3rem;
+    }
+
+    .footer-nav__items {
+        flex-direction: column;
+    }
+
+    .footer-items {
+        margin: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
