--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,6 +12,10 @@
     grid-area: header;
 }
 
+.logo {
+    margin-right: auto;
+}
+
 .header-nav__items {
     margin: 0;
     padding: 0;
@@ -67,27 +71,8 @@
 }
 
 @media (max-width: 50rem), (max-height: 40rem) {
-    .toggle-button {
-        display: inline-block;
-        width: 3rem;
-        background: transparent;
-        border: none;
-        cursor: pointer;
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-
-    .toggle-button:focus {
-        outline: none;
-    }
-
-    .toggle-button__bar {
-        width: 100%;
-        height: 0.3rem;
-        background: goldenrod;
-        display: block;
-        border-radius: 2rem;
-        margin: 0.3rem 0;
+    .logo {
+        margin-right: 0;
     }
 
     .header-nav {
