--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)),
-        url('../../../assets/images/footer.jpg');
+        url('../../assets/images/footer.jpg');
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
     width: 100vw;
