--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -1,5 +1,5 @@
 .product-overview {
-    background: url('../../../assets/images/back.jpg') 0 0 / cover no-repeat;
+    background: url('../../assets/images/back.jpg') 0 0 / cover no-repeat;
     width: 100%;
     height: 40vh;
     display: flex;
