--- a/src/components/Overview/ProductSelector/Form/FilterPropertyForm.css
+++ b/src/components/Overview/ProductSelector/Form/FilterPropertyForm.css
@@ -9,7 +9,7 @@
     padding: 1rem 2rem;
     -webkit-appearance: none;
     appearance: none;
-    background-image: url('../../../assets/images/dropdown.svg');
+    background-image: url('../../../../assets/images/dropdown.svg');
     background-repeat: no-repeat;
     background-position: 95% center;
     font-size: 1.2rem;
