Minor style changes to spacing of elements

--- a/src/components/ProductArea/ProductInfo/Location/Location.css
+++ b/src/components/ProductArea/ProductInfo/Location/Location.css
@@ -1,3 +1,11 @@
+.location {
+    padding: 1rem 0;
+}
+
+.location-title {
+    margin-bottom: 2rem;
+}
+
 .location-map {
     width: 60rem;
     height: 30rem;
