--- a/src/components/SideArea/Recommendations/Recommendations.css
+++ b/src/components/SideArea/Recommendations/Recommendations.css
@@ -4,7 +4,7 @@
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
     width: 40rem;
     padding: 1rem 3rem;
-    margin: 1rem;
+    margin: 1rem 0 2rem;
 }
 
 .avatar-text_grey {
