Refactor footer list to nav items and improve styling to match design

--- a/src/components/Footer/Content/Content.css
+++ b/src/components/Footer/Content/Content.css
@@ -9,6 +9,11 @@
     color: goldenrod;
 }
 
+.footer-description {
+    width: 20rem;
+    color: white;
+}
+
 .footer__link {
     text-decoration: none;
     border: 0.1rem solid goldenrod;
