--- a/src/components/Footer/Content/Content.css
+++ b/src/components/Footer/Content/Content.css
@@ -1,12 +1,17 @@
 .footer-content {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
     align-items: center;
-    padding: 16rem 0;
+    padding: 2rem 0;
 }
 
-.footer-text {
+.footer-text,
+.footer__text {
     color: goldenrod;
+}
+
+.footer__text {
+    display: none;
 }
 
 .footer-description {
@@ -29,31 +34,15 @@
     background: goldenrod;
 }
 
-@media (max-width: 75rem) {
+@media (min-width: 40rem) {
     .footer-content {
-        align-items: center;
-        padding: 8rem 0;
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 16rem 0;
     }
 
-    .footer__link {
-        text-decoration: none;
-        border: 0.1rem solid goldenrod;
-        border-radius: 0.3rem;
-        padding: 1rem 2rem;
-        color: white;
-        font-weight: bold;
-    }
-}
-
-@media (max-width: 50rem) {
-    .footer-content {
-        flex-direction: column;
-        align-items: center;
-        padding: 4rem 0;
-    }
-
-    .footer__text {
-        display: none;
+    .footer-text {
+        color: goldenrod;
     }
 
     .footer__link {
