--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,16 +2,16 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)),
         url('../../assets/images/footer.jpg');
     background-repeat: no-repeat;
-    background-size: 100vw 100vh;
-    width: 100vw;
+    background-size: 100% 100%;
+    width: 100%;
     height: 100vh;
     grid-area: footer;
 }
 
-@media (max-width: 75rem) {
+@media (min-width: 40rem) {
     .footer {
         background-size: 100% 100%;
         width: 100%;
-        height: 100%;
+        height: 100vh;
     }
 }
