--- a/src/components/Footer/Navigation/NavItems/NavItems.css
+++ b/src/components/Footer/Navigation/NavItems/NavItems.css
@@ -1,46 +1,47 @@
+.footer__link {
+    padding: 0.5rem 2.5rem;
+}
+
+.footer-list_pad {
+    margin-bottom: 2rem;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
 .footer-items {
-    margin: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.footer-list__item {
+    font-size: 1.4rem;
 }
 
 .footer-nav__items li {
     color: white;
     font-weight: bolder;
     list-style: none;
+    padding: 0.5rem;
 }
 
-.footer-list__item {
-    font-size: 1.5rem;
-    padding: 1rem;
-}
-
-.footer-list_pad {
-    padding-top: 2rem;
-}
-
-@media (max-width: 75rem) {
-    .footer-list__item {
-        font-size: 1.2rem;
-        padding: 1rem;
-    }
-
-    .footer-list_pad {
-        padding-top: 2rem;
-        margin-bottom: 2rem;
-    }
-}
-
-@media (max-width: 50rem) {
-    .footer__link {
-        padding: 1rem 3rem;
-    }
-
+@media (min-width: 40rem) {
     .footer-items {
         margin: 2rem;
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .footer-list__item {
+        font-size: 1.5rem;
+        padding: 1rem;
+    }
+
+    .footer-list_pad {
+        padding-top: 2rem;
     }
 }
