--- a/src/components/Footer/Navigation/Navigation.css
+++ b/src/components/Footer/Navigation/Navigation.css
@@ -1,20 +1,11 @@
 .footer-nav__items {
     display: flex;
-    justify-content: center;
-    padding-top: 10rem;
+    flex-direction: column;
 }
 
-@media (max-width: 75rem) {
+@media (min-width: 40rem) {
     .footer-nav__items {
-        display: flex;
-        justify-content: center;
-        padding-top: 5rem;
-        margin: 0;
-    }
-}
-
-@media (max-width: 50rem) {
-    .footer-nav__items {
-        flex-direction: column;
+        flex-direction: row;
+        padding-top: 10rem;
     }
 }
