--- a/src/components/Footer/Content/Content.css
+++ b/src/components/Footer/Content/Content.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem 0;
+    padding: 3rem 0;
 }
 
 .footer-text,
@@ -38,11 +38,12 @@
     .footer-content {
         flex-direction: row;
         justify-content: space-around;
-        padding: 16rem 0;
+        padding: 8rem 0;
     }
 
-    .footer-text {
+    .footer__text {
         color: goldenrod;
+        display: block;
     }
 
     .footer__link {
