--- a/src/components/Footer/Navigation/NavItems/NavItems.css
+++ b/src/components/Footer/Navigation/NavItems/NavItems.css
@@ -30,7 +30,7 @@ ul {
 
 @media (min-width: 40rem) {
     .footer-items {
-        margin: 2rem;
+        margin: 3rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -39,6 +39,10 @@ ul {
     .footer-list__item {
         font-size: 1.5rem;
         padding: 1rem;
+    }
+
+    .footer-nav__items li {
+        padding: 0.6rem;
     }
 
     .footer-list_pad {
