--- a/src/components/ProductArea/ProductInfo/Description/Description.css
+++ b/src/components/ProductArea/ProductInfo/Description/Description.css
@@ -1,3 +1,7 @@
 .product-description {
     padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
