--- a/src/components/SideArea/Interests/Interests.css
+++ b/src/components/SideArea/Interests/Interests.css
@@ -1,10 +1,10 @@
 .profile {
     background: #fffefe;
     border: 1px;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
-    width: 40rem;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
+    width: 29rem;
     padding: 1rem 3rem;
-    margin: 1rem 0 2rem;
+    margin: 0.5rem;
 }
 
 .avatar-text_grey {
@@ -16,18 +16,10 @@
     color: #b41f1f;
 }
 
-@media (max-width: 75rem) {
+@media (min-width: 40rem) {
     .profile {
-        width: 30rem;
+        width: 40rem;
         padding: 1rem 3rem;
-        margin: 1rem;
-    }
-}
-
-@media (max-width: 50rem) {
-    .profile {
-        width: 25rem;
-        padding: 1rem 3rem;
-        margin: 1rem;
+        margin: 1rem 0 2rem;
     }
 }
