Switch to SVG icons for various elements and reduce image sizes further

--- a/src/components/Instructions/Instructions.css
+++ b/src/components/Instructions/Instructions.css
@@ -11,6 +11,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.instruction__icon {
+    vertical-align: middle;
+    margin: 5px;
+}
+
 @media (max-width: 50rem) {
     .instructions {
         align-items: flex-start;
