Add search icon inline and remove duplicate asset

--- a/src/components/Overview/ProductSelector/Form/FilterPropertyForm.css
+++ b/src/components/Overview/ProductSelector/Form/FilterPropertyForm.css
@@ -33,6 +33,12 @@
     cursor: pointer;
 }
 
+#Icon-Color {
+    fill: white;
+    width: '13px';
+    height: '14px';
+}
+
 @media (min-width: 40rem) {
     .form {
         flex-direction: row;
