--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Barlow+Condensed:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
 
 :root {
     --soft-grey: #6e6a6a;
@@ -22,4 +23,16 @@ body {
         'header'
         'main'
         'footer';
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    line-height: 1.28em;
+    margin: 0 0 1rem;
+    font-weight: 700;
+    padding: 0;
 }
