--- a/src/components/SideArea/Interests/Partners/PartnerLinks/PartnerLink/Service/Service.css
+++ b/src/components/SideArea/Interests/Partners/PartnerLinks/PartnerLink/Service/Service.css
@@ -12,6 +12,7 @@
     font-size: 0.8rem;
     font-weight: bold;
     color: goldenrod;
+    text-decoration: none;
 }
 
 .partner-profile__link:hover {
