--- a/src/components/SideArea/Interests/Partners/PartnerAvatar/PartnerAvatar.css
+++ b/src/components/SideArea/Interests/Partners/PartnerAvatar/PartnerAvatar.css
@@ -7,6 +7,7 @@
     height: 4rem;
     width: 4rem;
     border-radius: 50%;
+    align-items: center;
     box-shadow: 2px -2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
